[gd_scene load_steps=8 format=2]

[ext_resource path="res://Theme/digital-7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Credits/Credits.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Credits/HiddenScrollBar.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=3]
size = 48
extra_spacing_bottom = 16
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
extra_spacing_bottom = 16
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
extra_spacing_bottom = 16
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
extra_spacing_bottom = 16
font_data = ExtResource( 1 )

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
h1_font = SubResource( 3 )
h2_font = SubResource( 2 )
h3_font = SubResource( 5 )
h4_font = SubResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1024.0
margin_bottom = 2656.0
rect_min_size = Vector2( 1024, 0 )

[node name="HeaderSpace" type="Control" parent="ScrollContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 1024.0
rect_min_size = Vector2( 0, 1024 )

[node name="RichTextLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
margin_top = 1028.0
margin_right = 1024.0
margin_bottom = 1628.0
rect_min_size = Vector2( 1024, 0 )
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
bbcode_enabled = true
bbcode_text = "[center]
## Collaborators
### Team Lead
[url=https://maaack.itch.io/]Marek[/url] 

### Programming
Marek  
Tomy  

### SFX and Composition
[url=https://www.youtube.com/channel/UCSjKBALUTiv8prOCSqdu3xA]Twitchywhalez[/url]  
Mike  

### Concept and Design
Marek 

## Sourced / Unaffiliated
### Fonts
#### Currently Everything
Author: [url=http://www.styleseven.com/]Style-7[/url]  
Source: [url=https://www.1001fonts.com/digital-7-font.html]1001Fonts : digital-7-font.html[/url]  
License: [url=http://www.styleseven.com/]Free for personal use[/url]


## Tools
#### Godot
Author: [url=https://godotengine.org/contact]Juan Linietsky, Ariel Manzur, and contributors[/url]  
Source: [url=https://godotengine.org/]godotengine.org[/url]  
License: [url=https://github.com/godotengine/godot/blob/master/LICENSE.txt]MIT License[/url] 

#### Git
Author: [url=https://github.com/torvalds]Linus Torvalds[/url]  
Source: [url=https://git-scm.com/downloads]git-scm.com[/url]  
License: [url=https://opensource.org/licenses/GPL-2.0]GNU General Public License version 2[/url]

#### PyCharm
Author: [url=https://www.jetbrains.com/]Jet Brains[/url]  
Source: [url=https://www.jetbrains.com/pycharm/download/]jetbrains.com[/url]  
License: [url=https://www.jetbrains.com/]Copyright © 2000-2020 JetBrains s.r.o[/url]
[/center]"
text = "
## Collaborators
### Team Lead
Marek 

### Programming
Marek  
Tomy  

### SFX and Composition
Twitchywhalez  
Mike  

### Concept and Design
Marek 

## Sourced / Unaffiliated
### Fonts
#### Currently Everything
Author: Style-7  
Source: 1001Fonts : digital-7-font.html  
License: Free for personal use


## Tools
#### Godot
Author: Juan Linietsky, Ariel Manzur, and contributors  
Source: godotengine.org  
License: MIT License 

#### Git
Author: Linus Torvalds  
Source: git-scm.com  
License: GNU General Public License version 2

#### PyCharm
Author: Jet Brains  
Source: jetbrains.com  
License: Copyright © 2000-2020 JetBrains s.r.o
"
fit_content_height = true
scroll_active = false
selection_enabled = true

[node name="FooterSpace" type="Control" parent="ScrollContainer/VBoxContainer"]
margin_top = 1632.0
margin_right = 1024.0
margin_bottom = 2656.0
rect_min_size = Vector2( 0, 1024 )

[node name="ScrollResetTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="scroll_ended" from="ScrollContainer" to="." method="_on_ScrollContainer_scroll_ended"]
[connection signal="gui_input" from="ScrollContainer/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_gui_input"]
[connection signal="meta_clicked" from="ScrollContainer/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="timeout" from="ScrollResetTimer" to="." method="_on_ScrollResetTimer_timeout"]
